# DetectingDynamicRegions

./: CMakeLists.txt  NamingConventions.txt
cmake/: findOpenCV.cmake
header/: DepthMap.h  FlowVector3D.h  GlobalMotion.h  ImageBlock.h  Main.h  MotionHistoryImage.h  MotionSubtraction.h  OpticalFlow.h  Region.h  Segmentation.h  Tester.h  Visualize.h
help/: ImplementationNotes.txt  Notes.txt  concept.psd
kernels/: DepthmapKernel.cu  DepthmapKernel.h  GlobalMotionKernel.cu  GlobalMotionKernel.h  MotionSubtractionKernel.cu  MotionSubtractionKernel.h  OpticalFlowKernel.cu  OpticalFlowKernel.h  SegmentationKernel.cu  SegmentationKernel.h  add_vect.h  scaleByDepth.cu  scaleByDepth.h
res/TestData/: FramesInfo.txt
src/: DepthMap.cpp  FlowVector3D.cpp  GlobalMotion.cpp  ImageBlock.cpp  MotionHistoryImage.cpp  MotionSubtraction.cpp  OpticalFlow.cpp  Region.cpp  Segmentation.cpp  Tester.cpp  Visualize.cpp  main.cpp
test/: TestLibraries.cpp
